👨‍👨‍👦🦄 Checkpoint ./public/static/textwall.js:65718371/3501 ./public/index.html:65718371/84

--- a/public/index.html
+++ b/public/index.html
@@ -662,23 +662,23 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
           
 				<div class="separator"></div>
       
-				<div id="decorations" style="weight: 100%">
-          <div id="bold" title="Bold" class="tool infobtn">
+				<span id="decorations" style="weight: 100%">
+          <span id="bold" title="Bold" class="tool infobtn">
 					<img alt="bold" src="/static/bold.svg">
-				</div>
-				<div id="italic" title="Italic" class="tool infobtn">
+				</span>
+				<span id="italic" title="Italic" class="tool infobtn">
 					<img alt="italic" src="/static/italic.svg">
-				</div>
-				<div id="underline" title="Underline" class="tool infobtn">
+				</span>
+				<span id="underline" title="Underline" class="tool infobtn">
 					<img alt="underline" src="/static/underline.svg">
-				</div>
-				<div id="overline" title="Overline" class="tool infobtn">
+				</span>
+				<span id="overline" title="Overline" class="tool infobtn">
 					<img alt="overline" src="/static/overline.svg">
-				</div>
-				<div id="strikethrough" title="Strikethrough" class="tool infobtn">
+				</span>
+				<span id="strikethrough" title="Strikethrough" class="tool infobtn">
 					<img alt="strikethrough" src="/static/strikethrough.svg">
-				</div>
-        </div>
+				</span>
+        </span>
 				</div>
 			</div>
     </div>
