⛵️😄 Checkpoint ./public/static/textwall.js:65718371/238 ./public/index.html:65718371/256

--- a/public/index.html
+++ b/public/index.html
@@ -193,9 +193,11 @@
           for="copydecorations"
           >Copy decorations</label
         ><br />
-        <input id="rainbow" type="checkbox" /><label for="rainbow"
+        <div class="hidden">
+          <input id="rainbow" type="checkbox" /><label for="rainbow"
           >Rainbow text</label
-        ><br /><br />
+        >
+        </div><br />
         <label></label>
         <label for="zoom">Zoom: </label
         ><input
