⛽️🦂 Checkpoint ./.glitch-assets:65718371/1312 ./public/index.html:65718371/580

--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,22 @@
     <title>RichardWall</title>
     <link
       rel="icon"
-      href="https://cdn.glitch.global/72265ca4-4364-4edd-a873-7a7a04d94042/RichardWallLogo2.png?v=1747386078989"
+      href="https://cdn.glitch.global/72265ca4-4364-4edd-a873-7a7a04d94042/RichardWallLogo2.png?v=1747657257307"
     />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <meta name="description" content="Multiplayer text editor, but better." />
+    <meta name="description" content="textwall.cc look-alike, 12 more colors!" />
     <meta id="theme-colour" name="theme-color" content="#222222" />
     <meta property="og:title" content="Richardwall" />
     <meta property="og:type" content="website" />
     <meta name="keywords" content="textwall" />
     <meta
       property="og:description"
-      content="Multiplayer text editor, but better."
+      content="textwall.cc look-alike, 12 more colors!"
     />
     <meta property="og:url" content="https://richardtextwall.glitch.me/" />
     <meta
       property="og:image"
-      content="https://cdn.glitch.global/72265ca4-4364-4edd-a873-7a7a04d94042/RichardWallLogo2.png?v=1747386078989"
+      content="https://cdn.glitch.global/72265ca4-4364-4edd-a873-7a7a04d94042/RichardWallLogo2.png?v=1747657257307"
     />
     <link rel="stylesheet" href="/static/textwall.css" />
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
