👮🚊 Checkpoint ./public/index.html:65718371/15

--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
     </div>
     <div id="usermenu" class="hidden">
       <div id="optionsmenu">
-        <h1>Options</h1>
+        <h1>Settings</h1>
         <input id="showothercurs" type="checkbox" /><label for="showothercurs"
           >Show other cursors</label
         ><br />
