--- a/public/index.html
+++ b/public/index.html
@@ -153,9 +153,8 @@
       <div class="chatcontainer">
         <div id="chatbox"><hr></div>
         <div class="msgcontainer">
-          <input
+          <textarea
             maxlength="400"
-            type="text"
             title="type a message"
             id="chatmsg"
           />
